tests/snapshots/cli_matrix__row_110_wrap_stdout.snap
---
source: tests/cli_matrix.rs
expression: stdout_result.envelope(&stdout_case)
---
case: row_110_wrap
mode: stdout
args: --wrap --renumber --breaks --footnotes --code-emphasis
status: code: 0

[stdout]
This paragraph references item 1 and uses enough words to demonstrate wrapping
behaviour when the wrap variant is enabled.

1. https://example.com/alpha
2. https://example.com/beta

[stderr]

[file]
<not applicable>
