tests/snapshots/cli_matrix__row_111_wrap_in_place.snap
---
source: tests/cli_matrix.rs
expression: in_place_result.envelope(&in_place_case)
---
case: row_111_wrap
mode: in_place
args: --wrap --renumber --breaks --ellipsis --headings --in-place
status: code: 0

[stdout]

[stderr]

[file]
---
title: Matrix
---

## Heading

______________________________________________________________________

Text… after break.
