tests/snapshots/cli_matrix__row_111_wrap_stdout.snap
---
source: tests/cli_matrix.rs
expression: stdout_result.envelope(&stdout_case)
---
case: row_111_wrap
mode: stdout
args: --wrap --renumber --breaks --ellipsis --headings
status: code: 0

[stdout]
---
title: Matrix
---

## Heading

______________________________________________________________________

Text… after break.

[stderr]

[file]
<not applicable>
